feat: Add search capability to the `search books` view
Also made a small refactor on the `/components` folder.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+$primary-color: rgb(226, 81, 19);
+
+@import '~/loaders.css/src/animations/line-scale.scss'
+
+.loader-hidden {
+  display: none;
+}
+
+.loader-active {
+  display: block;
+}
+
 html, body, .root {
   height: 100%;
 }
