feat: Add a Sass preprocessor for doing some cool stuff :)

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+$minha-cor: #00ccff;
+
 html, body, .root {
   height: 100%;
 }
@@ -12,7 +14,7 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: $minha-cor;
   text-align: center;
 }
 .list-books-title h1 {
@@ -53,7 +55,7 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: $minha-cor;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -152,7 +154,7 @@ body, .app {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: $minha-cor;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
