--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-$minha-cor: #00ccff;
+@import 'styles/variables';
 
 html, body, .root {
   height: 100%;
@@ -14,7 +14,7 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: $minha-cor;
+  background: $main-color;
   text-align: center;
 }
 .list-books-title h1 {
@@ -55,7 +55,7 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: $minha-cor;
+  background: $main-color;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -154,7 +154,7 @@ body, .app {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: $minha-cor;
+  background: $main-color;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
