feat: Add a loader to show to the user when books are being fetched

--- a/src/components/ListBooks/ListBooks.scss
+++ b/src/components/ListBooks/ListBooks.scss
@@ -14,21 +14,32 @@
   padding: 0 0 80px;
   flex: 1; }
 
-  .open-search {
-    position: fixed;
-    right: 25px;
-    bottom: 25px;
-  }
-  .open-search a {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: $main-color;
-    background-image: url('../../icons/add.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 28px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    font-size: 0;
-  }
+.open-search {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+}
+.open-search a {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: $main-color;
+  background-image: url('../../icons/add.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  font-size: 0;
+}
+
+.sad {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-image: url('../../icons/sad.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  font-size: 0;
+}
