--- a/src/components/Book/Book.scss
+++ b/src/components/Book/Book.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .book {
   width: 140px;
 }
@@ -8,7 +10,10 @@
 }
 
 .book-title {
-  margin-top: 10px;
+  margin-top: 15px;
+  font-size: 1em;
+  font-weight: bold;
+  color: $foreground-color;
 }
 
 .book-authors {
