--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,6 @@
+@import './variables';
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+
 html, body, .root {
   height: 100%;
 }
@@ -7,7 +10,8 @@ body {
 }
 
 body, .app {
-  background: white;
+  color: $foreground-color;
+  background: $background-color;
 }
 
 /* books grid */
