--- a/src/components/BookDetails/BookDetails.scss
+++ b/src/components/BookDetails/BookDetails.scss
@@ -7,6 +7,20 @@
   bottom: -10px;
 }
 
+.close-details {
+  display: block;
+  top: 20px;
+  left: 15px;
+  width: 50px;
+  height: 53px;
+  background: $main-color;
+  background-image: url('../../icons/arrow-back.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 28px;
+  font-size: 0;
+}
+
 .book-details-link a {
   display: block;
   width: 40px;
@@ -19,4 +33,9 @@
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
+}
+
+.book-details-spacer {
+  flex: 1;
+  background: $main-color;
 }
