--- a/src/components/SearchBooks/SearchBooks.scss
+++ b/src/components/SearchBooks/SearchBooks.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .search-books-bar {
   position: fixed;
   width: 100%;
@@ -9,7 +11,7 @@
 }
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  background: $main-color;
 }
 .search-books-bar input {
   width: 100%;
@@ -17,6 +19,7 @@
   font-size: 1.25em;
   border: none;
   outline: none;
+  background: $main-color;
 }
 
 .close-search {
@@ -25,7 +28,7 @@
   left: 15px;
   width: 50px;
   height: 53px;
-  background: white;
+  background: $main-color;
   background-image: url('../../icons/arrow-back.svg');
   background-position: center;
   background-repeat: no-repeat;
